--- a/PracticaSupervisada.csproj
+++ b/PracticaSupervisada.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\" />
+  </ItemGroup>
+
 </Project>
